--- a/css/main.less
+++ b/css/main.less
@@ -94,12 +94,12 @@ main{
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(200px, 1fr);
     grid-auto-flow: dense;
-    
+
 
     .box-1{
         align-items: center;
         text-align: center;
-        background: url(../img/img1.png) center no-repeat;
+        background: url(img/img1.png) center no-repeat;
         background-size: cover;
         grid-column: span 2;
         grid-row: span 3;
@@ -116,7 +116,7 @@ main{
         display: grid;
         grid-auto-rows: 200px;
         grid-column: 1fr;
-        
+
         .text__box{
             grid-row: span 2;
             grid-column: span 1;
@@ -126,7 +126,7 @@ main{
             grid-row: span 1;
             grid-column: span 1;
 
-            background: url(../img/Img5.png) no-repeat center;
+            background: url(img/Img5.png) no-repeat center;
             background-size: cover;
         }
     }
@@ -135,7 +135,7 @@ main{
     .text__box{
         text-align: center;
         position: relative;
-        
+
         img{
             padding: 70px 0 25px 0;
         }
@@ -155,7 +155,7 @@ main{
             padding: 20px 10px 0 10px;
             color: @gray;
         }
-        
+
         hr{
             width: 50px;
             height: 1px;
@@ -166,7 +166,7 @@ main{
         }
     }
 
-    
+
 
     .box-4{
         grid-column: span 1;
@@ -174,7 +174,7 @@ main{
         display: grid;
         grid-auto-rows: 200px;
         grid-column: 1fr;
-        
+
         .text__box{
             grid-row: span 2;
             grid-column: span 1;
@@ -184,32 +184,32 @@ main{
             grid-row: span 1;
             grid-column: span 1;
 
-            background: url(../img/Img6.png) no-repeat center;
+            background: url(img/Img6.png) no-repeat center;
             background-size: cover;
         }
     }
 
 
-    .box-5{ 
-        background: url(../img/img4.png) no-repeat center;
+    .box-5{
+        background: url(img/img4.png) no-repeat center;
         background-size: cover;
         text-align: center;
 
         grid-column: span 2;
-        grid-row: span 3;  
-        
+        grid-row: span 3;
+
         img{
             margin-top: 220px;
         }
     }
 
     .box-7{
-        background: url(../img/img7.png) no-repeat center;
+        background: url(img/img7.png) no-repeat center;
         background-size: cover;
         text-align: center;
 
         grid-column: span 1;
-        grid-row: span 3;  
+        grid-row: span 3;
 
         img{
             margin-top: 268px;
@@ -222,7 +222,7 @@ main{
         display: grid;
         grid-auto-rows: 200px;
         grid-column: 1fr;
-        
+
         .text__box{
             grid-row: span 2;
             grid-column: span 1;
@@ -232,26 +232,26 @@ main{
             grid-row: span 1;
             grid-column: span 1;
 
-            background: url(../img/Img10.png) no-repeat center;
+            background: url(img/Img10.png) no-repeat center;
             background-size: cover;
         }
     }
 
 
     .box-9{
-        background: url(../img/img9.png) no-repeat center;
+        background: url(img/img9.png) no-repeat center;
         background-size: cover;
         text-align: center;
 
         grid-column: span 1;
-        grid-row: span 3; 
+        grid-row: span 3;
     }
 }
 
 
 .slider__list{
     background-color: #f7f7f7;
-    
+
 
     .slider__item{
         padding: 120px 0 100px 0;
@@ -320,10 +320,10 @@ main{
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: 268px;
     grid-auto-flow: dense;
-    
+
 
     .sec-02-box-1{
-        background: url(../img/sec-02-1.png)no-repeat center;
+        background: url(img/sec-02-1.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -331,7 +331,7 @@ main{
     }
 
     .sec-02-box-2{
-        background: url(../img/sec-02-2.png)no-repeat center;
+        background: url(img/sec-02-2.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -339,7 +339,7 @@ main{
     }
 
     .sec-02-box-3{
-        background: url(../img/sec-02-4.png)no-repeat center;
+        background: url(img/sec-02-4.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -347,7 +347,7 @@ main{
     }
 
     .sec-02-box-4{
-        background: url(../img/sec-02-5.png)no-repeat center;
+        background: url(img/sec-02-5.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -355,7 +355,7 @@ main{
     }
 
     .sec-02-box-5{
-        background: url(../img/sec-02-6.png)no-repeat center;
+        background: url(img/sec-02-6.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 2;
@@ -363,7 +363,7 @@ main{
     }
 
     .sec-02-box-6{
-        background: url(../img/sec-02-3.png)no-repeat center;
+        background: url(img/sec-02-3.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 2;
@@ -371,7 +371,7 @@ main{
     }
 
     .sec-02-box-7{
-        background: url(../img/sec-02-7.png)no-repeat center;
+        background: url(img/sec-02-7.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -379,7 +379,7 @@ main{
     }
 
     .sec-02-box-8{
-        background: url(../img/sec-02-8.png)no-repeat center;
+        background: url(img/sec-02-8.png)no-repeat center;
         background-size: cover;
         grid-column: span 1;
         grid-row: span 1;
@@ -414,7 +414,7 @@ main{
             height: 100%;
             align-items: center;
             justify-content: center;
-            background-image: url(../img/sec-02-link-bg.png);
+            background-image: url(img/sec-02-link-bg.png);
             background-size: cover;
         }
     }
@@ -492,7 +492,7 @@ main{
 
 footer{
     background-color: #f7f7f7;
-    
+
     .footer__conteiner{
         height: 250px;
         display: flex;
