--- a/css/main.less
+++ b/css/main.less
@@ -21,7 +21,7 @@ main{
     display: grid;
     grid-template-columns: 1fr;
     height: 100vh;
-    background: url(../img/main.jpg) center no-repeat;
+    background: url(img/main.jpg) center no-repeat;
     background-size: cover;
     text-align: center;
 
