--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   height: 100vh;
-  background: url(img/main.jpg) center no-repeat;
+  background: url(../img/main.jpg) center no-repeat;
   background-size: cover;
   text-align: center;
 }
@@ -77,7 +77,7 @@ main header .header__burger {
 #sec-01 .box-1 {
   align-items: center;
   text-align: center;
-  background: url(img/img1.png) center no-repeat;
+  background: url(../img/img1.png) center no-repeat;
   background-size: cover;
   grid-column: span 2;
   grid-row: span 3;
@@ -99,7 +99,7 @@ main header .header__burger {
 #sec-01 .box-2 .img__box1 {
   grid-row: span 1;
   grid-column: span 1;
-  background: url(img/Img5.png) no-repeat center;
+  background: url(../img/Img5.png) no-repeat center;
   background-size: cover;
 }
 #sec-01 .text__box {
@@ -145,11 +145,11 @@ main header .header__burger {
 #sec-01 .box-4 .img__box2 {
   grid-row: span 1;
   grid-column: span 1;
-  background: url(img/Img6.png) no-repeat center;
+  background: url(../img/Img6.png) no-repeat center;
   background-size: cover;
 }
 #sec-01 .box-5 {
-  background: url(img/img4.png) no-repeat center;
+  background: url(../img/img4.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 2;
@@ -159,7 +159,7 @@ main header .header__burger {
   margin-top: 220px;
 }
 #sec-01 .box-7 {
-  background: url(img/img7.png) no-repeat center;
+  background: url(../img/img7.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 1;
@@ -182,11 +182,11 @@ main header .header__burger {
 #sec-01 .box-8 .img__box3 {
   grid-row: span 1;
   grid-column: span 1;
-  background: url(img/Img110.png) no-repeat center;
+  background: url(../img/Img110.png) no-repeat center;
   background-size: cover;
 }
 #sec-01 .box-9 {
-  background: url(img/img9.png) no-repeat center;
+  background: url(../img/img9.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 1;
@@ -250,56 +250,56 @@ main header .header__burger {
   grid-auto-flow: dense;
 }
 #sec-02 .sec-02-box-1 {
-  background: url(img/sec-02-1.png) no-repeat center;
+  background: url(../img/sec-02-1.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 1;
   grid-row: span 1;
 }
 #sec-02 .sec-02-box-2 {
-  background: url(img/sec-02-2.png) no-repeat center;
+  background: url(../img/sec-02-2.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 1;
   grid-row: span 1;
 }
 #sec-02 .sec-02-box-3 {
-  background: url(img/sec-02-4.png) no-repeat center;
+  background: url(../img/sec-02-4.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 1;
   grid-row: span 2;
 }
 #sec-02 .sec-02-box-4 {
-  background: url(img/sec-02-5.png) no-repeat center;
+  background: url(../img/sec-02-5.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 1;
   grid-row: span 2;
 }
 #sec-02 .sec-02-box-5 {
-  background: url(img/sec-02-6.png) no-repeat center;
+  background: url(../img/sec-02-6.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 2;
   grid-row: span 1;
 }
 #sec-02 .sec-02-box-6 {
-  background: url(img/sec-02-3.png) no-repeat center;
+  background: url(../img/sec-02-3.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 2;
   grid-row: span 1;
 }
 #sec-02 .sec-02-box-7 {
-  background: url(img/sec-02-7.png) no-repeat center;
+  background: url(../img/sec-02-7.png) no-repeat center;
   background-size: cover;
   text-align: center;
   grid-column: span 1;
   grid-row: span 1;
 }
 #sec-02 .sec-02-box-8 {
-  background: url(img/sec-02-8.png) no-repeat center;
+  background: url(../img/sec-02-8.png) no-repeat center;
   background-size: cover;
   grid-column: span 1;
   grid-row: span 1;
@@ -327,7 +327,7 @@ main header .header__burger {
   height: 100%;
   align-items: center;
   justify-content: center;
-  background-image: url(img/sec-02-link-bg.png);
+  background-image: url(../img/sec-02-link-bg.png);
   background-size: cover;
 }
 .shop {
