--- a/css/main.less
+++ b/css/main.less
@@ -21,7 +21,7 @@ main{
     display: grid;
     grid-template-columns: 1fr;
     height: 100vh;
-    background: url(img/main.jpg) center no-repeat;
+    background: url(../img/main.jpg) center no-repeat;
     background-size: cover;
     text-align: center;
 
@@ -99,7 +99,7 @@ main{
     .box-1{
         align-items: center;
         text-align: center;
-        background: url(img/img1.png) center no-repeat;
+        background: url(../img/img1.png) center no-repeat;
         background-size: cover;
         grid-column: span 2;
         grid-row: span 3;
@@ -126,7 +126,7 @@ main{
             grid-row: span 1;
             grid-column: span 1;
 
-            background: url(img/Img5.png) no-repeat center;
+            background: url(../img/Img5.png) no-repeat center;
             background-size: cover;
         }
     }
@@ -184,14 +184,14 @@ main{
             grid-row: span 1;
             grid-column: span 1;
 
-            background: url(img/Img6.png) no-repeat center;
+            background: url(../img/Img6.png) no-repeat center;
             background-size: cover;
         }
     }
 
 
     .box-5{
-        background: url(img/img4.png) no-repeat center;
+        background: url(../img/img4.png) no-repeat center;
         background-size: cover;
         text-align: center;
 
@@ -204,7 +204,7 @@ main{
     }
 
     .box-7{
-        background: url(img/img7.png) no-repeat center;
+        background: url(../img/img7.png) no-repeat center;
         background-size: cover;
         text-align: center;
 
@@ -232,14 +232,14 @@ main{
             grid-row: span 1;
             grid-column: span 1;
 
-            background: url(img/Img110.png) no-repeat center;
+            background: url(../img/Img110.png) no-repeat center;
             background-size: cover;
         }
     }
 
 
     .box-9{
-        background: url(img/img9.png) no-repeat center;
+        background: url(../img/img9.png) no-repeat center;
         background-size: cover;
         text-align: center;
 
@@ -323,7 +323,7 @@ main{
 
 
     .sec-02-box-1{
-        background: url(img/sec-02-1.png)no-repeat center;
+        background: url(../img/sec-02-1.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -331,7 +331,7 @@ main{
     }
 
     .sec-02-box-2{
-        background: url(img/sec-02-2.png)no-repeat center;
+        background: url(../img/sec-02-2.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -339,7 +339,7 @@ main{
     }
 
     .sec-02-box-3{
-        background: url(img/sec-02-4.png)no-repeat center;
+        background: url(../img/sec-02-4.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -347,7 +347,7 @@ main{
     }
 
     .sec-02-box-4{
-        background: url(img/sec-02-5.png)no-repeat center;
+        background: url(../img/sec-02-5.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -355,7 +355,7 @@ main{
     }
 
     .sec-02-box-5{
-        background: url(img/sec-02-6.png)no-repeat center;
+        background: url(../img/sec-02-6.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 2;
@@ -363,7 +363,7 @@ main{
     }
 
     .sec-02-box-6{
-        background: url(img/sec-02-3.png)no-repeat center;
+        background: url(../img/sec-02-3.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 2;
@@ -371,7 +371,7 @@ main{
     }
 
     .sec-02-box-7{
-        background: url(img/sec-02-7.png)no-repeat center;
+        background: url(../img/sec-02-7.png)no-repeat center;
         background-size: cover;
         text-align: center;
         grid-column: span 1;
@@ -379,7 +379,7 @@ main{
     }
 
     .sec-02-box-8{
-        background: url(img/sec-02-8.png)no-repeat center;
+        background: url(../img/sec-02-8.png)no-repeat center;
         background-size: cover;
         grid-column: span 1;
         grid-row: span 1;
@@ -414,7 +414,7 @@ main{
             height: 100%;
             align-items: center;
             justify-content: center;
-            background-image: url(img/sec-02-link-bg.png);
+            background-image: url(../img/sec-02-link-bg.png);
             background-size: cover;
         }
     }
